@@ -19,37 +19,6 @@ namespace Ui {
 	class qmpChannelsWindow;
 }
 
-class QDCPushButton:public QPushButton
-{
-	Q_OBJECT
-	private:
-		int id;
-	protected:
-		void mousePressEvent(QMouseEvent *event){QPushButton::mousePressEvent(event);emit onClick(id);}
-	public:
-		QDCPushButton(QString s):QPushButton(s){id=-1;}
-		void setID(int _id){id=_id;}
-		QSize sizeHint()const{return QSize();}
-	signals:
-		void onClick(int id);
-};
-
-class QDCComboBox:public QComboBox
-{
-	Q_OBJECT
-	private:
-		int id;
-	public:
-		QDCComboBox():QComboBox(){id=-1;connect(this,SIGNAL(currentIndexChanged(int)),this,SLOT(indexChangedSlot(int)));}
-		void setID(int _id){id=_id;}
-		QSize sizeHint()const{return QSize();}
-		QSize minimumSizeHint()const{return QSize();}
-	signals:
-		void onChange(int id,int idx);
-	public slots:
-		void indexChangedSlot(int idx){emit(onChange(id,idx));}
-};
-
 class qmpChannelsWindow;
 
 class qmpChannelFunc:public qmpFuncBaseIntf
