@@ -1,3 +1,10 @@
+2019-09-16 0.8.7 indev
+Use QCommandLineParser to parse arguments.
+
+New argument for loading plugins from given files.
+Use functor whenever possible in QObject::connect.
+A little bit of code cleanups.
+
 2019-09-13 0.8.7 indev
 CMake. It's happening.
 
